Fixing weird text issue width Gmap iframe on IE browsers

--- a/themes/dimpact/scss/style.scss
+++ b/themes/dimpact/scss/style.scss
@@ -491,6 +491,10 @@ div.workbench-info-block {
   }
 }
 
+.gmnoprint {
+  width: auto !important;
+}
+
 // Leave this here please :)
 @import "layout/default";
 @import "general/colors";
